--- a/src/main/resources/templates/board/createBoard.html
+++ b/src/main/resources/templates/board/createBoard.html
@@ -26,7 +26,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" th:href="@{/}">Lovestargram</a>
+    <a class="navbar-brand" th:href="@{/boards}">Lovestargram</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -52,41 +52,20 @@
   <div class="header mb-5">
     <h1 class="text-center">게시판 추가</h1>
   </div>
-  <div th:if="${error}" class="alert alert-danger" role="alert">
-    <p th:text="${error}"></p>
-  </div>
-  <form th:action="@{/boards/create}" th:object="${board}" method="post">
-    <div class="mb-3">
-      <label for="name">게시판 이름</label>
-      <input type="text" class="form-control" id="name" name="boardName" maxlength="20" placeholder="게시판 이름 입력 (최대 20자)" required />
-    </div>
-    <div class="mb-3">
-      <label for="description">게시판 설명</label>
-      <textarea
-          class="form-control"
-          id="description"
-          name="description"
-          maxlength="200"
-          placeholder="게시판 설명 입력 (최대 200자)"
-      ></textarea>
-    </div>
-    <div class="mb-3">
-      <label for="userId">작성자</label>
-      <select class="form-control" id="userId" name="userId" required>
-        <option value="" disabled selected>작성자 선택</option>
-        <option th:each="user : ${users}" th:value="${user.userId}" th:text="${user.username}"></option>
-      </select>
-    </div>
-    <button type="submit" class="btn btn-primary">게시판 추가</button>
-    <button
-        type="button"
-        class="btn btn-secondary"
-        onclick="window.history.back();"
-    >
-      취소
-    </button>
-  </form>
+    <form th:action="@{/boards/create}" th:object="${board}" method="post">
+      <div class="mb-3">
+        <label for="name">게시판 이름</label>
+        <input type="text" class="form-control" id="name" name="boardName" maxlength="20" placeholder="게시판 이름 입력 (최대 20자)" required />
+      </div>
+      <div class="mb-3">
+        <label for="description">게시판 설명</label>
+        <textarea class="form-control" id="description" name="description" maxlength="200" placeholder="게시판 설명 입력 (최대 200자)"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">게시판 추가</button>
+      <button type="button" class="btn btn-secondary" onclick="window.history.back();">취소</button>
+    </form>
 </div>
+
 
 <!-- 부트스트랩 JS 추가 -->
 <script
