--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -18,6 +18,11 @@
     body {
       font-family: "Elice DX Neolli", sans-serif;
     }
+
+    body {
+  background-color: #ffe6e6;
+}
+
   </style>
   <title th:text="${board.boardName}"></title>
 </head>
