--- a/src/main/resources/templates/board/createBoard.html
+++ b/src/main/resources/templates/board/createBoard.html
@@ -18,6 +18,11 @@
     body {
       font-family: "Elice DX Neolli", sans-serif;
     }
+
+    body {
+  background-color: #ffe6e6;
+}
+
   </style>
   <title>게시판 추가</title>
 </head>
