--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -34,6 +34,12 @@
     .comment:hover .btn-group {
       display: flex;
     }
+
+    body {
+  background-color: #ffe6e6;
+}
+
+
   </style>
   <title th:text="${post.title}"></title>
 </head>
@@ -42,11 +48,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" th:href="@{/boards}">Lovestargram</a>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/boards}">Boards</a>
-        </li>
+    <div class="collapse navbar-collapse justify-content-end">
+      <ul class="navbar-nav">
         <li class="nav-item" sec:authorize="isAnonymous()">
           <a class="nav-link" th:href="@{/register}">Register</a>
         </li>
@@ -62,7 +65,6 @@
     </div>
   </div>
 </nav>
-
 <div class="container my-5 mx-auto">
   <div class="d-flex justify-content-between mb-3">
     <a
