--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -4,46 +4,34 @@
   <meta charset="UTF-8">
   <title>Register</title>
   <!-- Bootstrap CSS 및 기타 CSS 파일 포함 -->
+  <style>
+    body {
+  background-color: #ffe6e6;
+}
+  .vh-100 {
+  height: 100vh;
+}
+
+  </style>
 </head>
 <body>
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" th:href="@{/boards}">Lovestargram</a>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/boards}">Boards</a>
-        </li>
-        <li class="nav-item" sec:authorize="isAnonymous()">
-          <a class="nav-link" th:href="@{/register}">Register</a>
-        </li>
-        <li class="nav-item" sec:authorize="isAnonymous()">
-          <a class="nav-link" th:href="@{/login}">Login</a>
-        </li>
-        <li class="nav-item" sec:authorize="isAuthenticated()">
-          <form th:action="@{/logout}" method="post">
-            <button type="submit" class="btn btn-link nav-link">Logout</button>
-          </form>
-        </li>
-      </ul>
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="card">
+    <div class="card-body">
+      <h1 class="text-center mb-4">Register</h1>
+      <form th:action="@{/register}" th:object="${user}" method="post">
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" id="username" th:field="*{username}" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" th:field="*{password}" required>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Register</button>
+      </form>
     </div>
   </div>
-</nav>
-
-<div class="container">
-  <h1>Register</h1>
-  <form th:action="@{/register}" th:object="${user}" method="post">
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" th:field="*{username}" required>
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" th:field="*{password}" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Register</button>
-  </form>
 </div>
 <!-- Bootstrap JS 및 기타 JS 파일 포함 -->
 </body>
