--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -2,6 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
   <!-- ... -->
+  <style>
+    body {
+  background-color: #ffe6e6;
+}
+  </style>
 </head>
 <body>
 <body>
