refactor: ui개선(네비게이션 개선)

--- a/src/main/resources/templates/board/boards.html
+++ b/src/main/resources/templates/board/boards.html
@@ -125,7 +125,7 @@
                 </button>
               </form>
               <form th:action="@{/boards/{boardId}(boardId=${board.boardId})}" th:method="delete" class="d-inline">
-                <button type="submit" class="btn btn-danger">Delete</button>
+                <button type="submit" class="btn btn-danger">삭제</button>
               </form>
             </div>
           </a>
