--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -47,7 +47,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" th:href="@{/boards}">Lovestargram</a>
+    <a class="navbar-brand" th:href="@{/boards}" style="color: red;">Datespot</a>
     <div class="collapse navbar-collapse justify-content-end">
       <ul class="navbar-nav">
         <li class="nav-item" sec:authorize="isAnonymous()">
