--- a/src/main/resources/templates/board/board.html
+++ b/src/main/resources/templates/board/board.html
@@ -25,11 +25,9 @@
   </style>
   <title>게시판 추가</title>
 </head>
-<body>
-<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" th:href="@{/boards}">Lovestargram</a>
+    <a class="navbar-brand" th:href="@{/boards}" style="color: red;">Datespot</a>
     <div class="collapse navbar-collapse justify-content-end">
       <ul class="navbar-nav">
         <li class="nav-item" sec:authorize="isAnonymous()">
