--- a/src/main/resources/templates/user/createUser.html
+++ b/src/main/resources/templates/user/createUser.html
@@ -12,12 +12,9 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" th:href="@{/boards}">Lovestargram</a>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/boards}">Boards</a>
-        </li>
+    <a class="navbar-brand" th:href="@{/boards}" style="color: red;">Datespot</a>
+    <div class="collapse navbar-collapse justify-content-end">
+      <ul class="navbar-nav">
         <li class="nav-item" sec:authorize="isAnonymous()">
           <a class="nav-link" th:href="@{/register}">Register</a>
         </li>
@@ -33,7 +30,6 @@
     </div>
   </div>
 </nav>
-
 <div class="container my-5">
   <div class="header mb-5">
     <h1 class="text-center">사용자 추가</h1>
