--- a/src/main/resources/templates/board/boards.html
+++ b/src/main/resources/templates/board/boards.html
@@ -106,7 +106,7 @@
     <h1 class="text-center">Datespot</h1>
   </div>
   <div class="d-flex justify-content-end mb-3">
-    <a th:href="@{/boards/create}" class="btn btn-primary">게시판 추가</a>
+    <a th:href="@{/boards/create}" class="btn btn-primary" style="background-color: #9370DB; border-color: #9370DB;">게시판 추가</a>
   </div>
   <div class="container p-0">
     <div class="row row-cols-3 position-relative">
